--- a/Agathas.Storefront.UI.Web.MVC/Web.config
+++ b/Agathas.Storefront.UI.Web.MVC/Web.config
@@ -60,19 +60,20 @@
 		<session-factory name="NHibernate.Test">
 			<property name="connection.driver_class">NHibernate.Driver.SqlClientDriver</property>
 			<property name="connection.connection_string">
-        Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|Shop.mdf;Integrated Security=True;User Instance=True
-      </property>
+                Data Source=.;Database=ShopAspDP;Integrated Security=True;
+            </property>
 			<property name="adonet.batch_size">10</property>
 			<property name="show_sql">true</property>
 			<property name="dialect">NHibernate.Dialect.MsSql2005Dialect</property>
 			<property name="use_outer_join">true</property>
 			<property name="command_timeout">60</property>
 			<property name="query.substitutions">true 1, false 0, yes 'Y', no 'N'</property>      
-      <property name="proxyfactory.factory_class">NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle</property>
+            <property name="proxyfactory.factory_class">NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle</property>
 		</session-factory>
 	</hibernate-configuration>
 	<connectionStrings>
-		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>
+		<!--<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient"/>-->
+		<add name="ApplicationServices" connectionString="data source=.;Database=ShopAspDPMembership;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
 	<system.net>
 		<mailSettings>
